Update publications and add a note on website domain

--- a/COIN/home.html
+++ b/COIN/home.html
@@ -50,7 +50,7 @@ MathJax.Hub.Config({
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
 </div>
-<p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin. <a href="opening.html" target=&ldquo;blank&rdquo;>Various positions</a> are available to join COIN-Lab@TCD. Please check, contact, and join us.</p>
+<p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin. <b><a href="./opening.html" target=&ldquo;blank&rdquo;>Various positions</a> are available to join COIN-Lab@TCD</b>. Please check, contact, and join us.</p>
 <p><div id="Research Interests"></p>
 <h2>Research Interests (COIN)</h2>
 <ul>
@@ -65,13 +65,19 @@ MathJax.Hub.Config({
 <p><div id="News"></p>
 <h2>News</h2>
 <ul>
-<li><p>[01/2024] Jiahui Zhao was awarded the CSC scholarship and joined COIN-Lab as a visiting PhD student.</p>
+<li><p>[03/2024] Hue Thi Dang joined COIN-Lab as a PhD student. Welcome!</p>
+</li>
+<li><p>[02/2024] Congratulations! Tuan and his FSGWL team was selected as the winner of the 1st @<a href="https://www.ucc.ie/en/sefs/news/2023/ai-quest-puts-computing-talent-to-work-on-ai-for-climate-action.html" target=&ldquo;blank&rdquo;>UCC AI Quest</a>. </p>
+</li>
+<li><p>[01/2024] Jiahui Zhao joined COIN-Lab as a visiting PhD student.</p>
 </li>
 <li><p>[12/2023] Congratulations! Mai Le successfully passed her PhD viva for the thesis titled &ldquo;Resource Allocation Optimization in Intelligent Wireless Networks&rdquo;.</p>
 </li>
 <li><p>[12/2023] Congratulations! Thanh Thien Dao successfully passed his PhD viva for the thesis titled &ldquo;Deep Learning-based Automatic Modulation Classification&rdquo;.</p>
 </li>
-<li><p>[10/2023] Mengyan Huang was awarded a Chinese government scholarship and joined COIN-Lab as a visiting PhD student.</p>
+<li><p>[11/2023] Congratulations! Dr. Viet Pham was selected as the winner of the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a>.</p>
+</li>
+<li><p>[10/2023] Mengyan Huang joined COIN-Lab as a visiting PhD student.</p>
 </li>
 <li><p>[09/2023] Two PhD students, Tuan Tran and Linh Nguyen, joined COIN-Lab. Congratulations and welcome!</p>
 </li>
@@ -99,7 +105,7 @@ statistics, and economics to design and build future network systems and improve
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on December 27<sup>th</sup> 2023  11:45AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on May 21<sup>st</sup> 2024  10:52AM (Time Zone: GMT Daylight Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
