--- a/COIN/team.html
+++ b/COIN/team.html
@@ -59,17 +59,32 @@ MathJax.Hub.Config({
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
-<li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5</p>
+<li><p>Telephone: +353-1-8968437</p>
 </li>
-<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
+<li><p>Office: 1.5, 13 Westland Row, Trinity College Dublin, Dublin 2, D02W272, Ireland</p>
 </li>
-<li><p><a href="https://www.scss.tcd.ie/viet.pham/Misc/Curriculum_Vitae_Pham.pdf" target=&ldquo;blank&rdquo;>Full CV</a>, <a href="https://www.scss.tcd.ie/viet.pham/Misc/Curriculum_Vitae_Failure_Pham.pdf" target=&ldquo;blank&rdquo;>CV of Failure</a>,
+<li><p><a href="https://www.scss.tcd.ie/viet.pham/Misc/Curriculum_Vitae_Pham.pdf" target=&ldquo;blank&rdquo;>Full CV</a>, 
+
 <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target=&ldquo;blank&rdquo;>Google Scholar</a>, 
 <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham" target=&ldquo;blank&rdquo;>ResearchGate</a>, 
 <a href="https://www.linkedin.com/in/pqv90/" target=&ldquo;blank&rdquo;>LinkedIn</a>, 
 <a href="https://orcid.org/0000-0002-9485-9216" target=&ldquo;blank&rdquo;>ORCID</a>, 
 <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100" target=&ldquo;blank&rdquo;>Scopus</a>, 
 and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldquo;blank&rdquo;>Web of Science</a></p>
+</li>
+</ul>
+<p></div></p>
+</div></div>
+<p><div id="visiting-fellow-container"></p>
+<h2>Visiting Fellows</h2>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/mai.jpg" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Visiting-Fellow">
+<a href="https://scholar.google.com.vn/citations?user=Y776EGYAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Mai Le</b></a> (Lê Thị Mai)</p>
+<ul>
+<li><p>Visiting Researcher, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/05 - Present.</p>
+</li>
+<li><p>Research Topic: Resource allocation, wireless AI, future networks.</p>
 </li>
 </ul>
 <p></div></p>
@@ -81,9 +96,9 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <a href="https://linhnt31.github.io/" target=&ldquo;blank&rdquo;><b>Linh Thanh Nguyen</b></a> (Nguyễn Thành Linh)</p>
 <ul>
-<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Sep. 2023 - Present.</p>
 </li>
-<li><p>Research Topic: Blockchain-enabled intelligent security and privacy preservation for IoT data marketplace.</p>
+<li><p>Research Topic: Security, privacy preservation, and incentivization in decentralized federated learning.</p>
 </li>
 </ul>
 <p></div></p>
@@ -93,37 +108,51 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <a href="https://vantuan5644.github.io/" target=&ldquo;blank&rdquo;><b>Tuan Van Tran</b></a> (Trần Văn Tuấn)</p>
 <ul>
-<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Sep. 2023 - Present.</p>
 </li>
-<li><p>Research Topic: Adaptive framework for scaling federated learning (FL) in IoT systems. </p>
+<li><p>Research Topic: Collective intelligence, federated learning, machine unlearning.</p>
 </li>
 </ul>
 <p></div></p>
 </div></div>
 <div id="text-img-container"><div id="img-container">
-<img src="./images/people/mengyan.png" alt="member pic" width="100px" /></div>
+<img src="./images/people/hue.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Hue Thi Dang</b> (Đặng Thị Huế)</p>
+<ul>
+<li><p>PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Mar. 2024 - Present.</p>
+</li>
+<li><p>Research Topic: Numeric accuracy and reproducibility in deep learning training and inference. </p>
+</li>
+<li><p>Co-supervision with Prof. Andrea Patane.</p>
+</li>
+</ul>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/mengyan.jpg" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
 <b>Mengyan Huang</b> (黄梦延)</p>
 <ul>
-<li><p>PhD Student, Xidian University, 2021/09 &ndash; Present.</p>
+<li><p>PhD Student, Xidian University, Sep. 2021 &ndash; Present.</p>
 </li>
 <li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/10 - Present.</p>
 </li>
-<li><p>Research Topic: beamforming/precoding, physical layer security, satellite communications, and NOMA.</p>
+<li><p>Research Topic: beamforming, physical layer security, non-terrestrial communications.</p>
 </li>
 </ul>
 <p></div></p>
 </div></div>
 <div id="text-img-container"><div id="img-container">
-<img src="./images/people/jiahui.png" alt="member pic" width="100px" /></div>
+<img src="./images/people/jiahui.jpg" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
 <b>Jiahui Zhao</b> (赵佳慧)</p>
 <ul>
-<li><p>PhD Student, Southeast University, 2020/09 &ndash; Present.</p>
+<li><p>PhD Student, Southeast University, Sep. 2020 &ndash; Present.</p>
 </li>
-<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2024/01 - Present.</p>
+<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Jan. 2024 - Present.</p>
 </li>
-<li><p>Research Topic: Semantic communication, mobile edge computing, deep reinforcement learning.</p>
+<li><p>Research Topic: Semantic communication, mobile edge computing, edge AI.</p>
 </li>
 </ul>
 <p></div></p>
@@ -133,41 +162,11 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <a href="https://scholar.google.com.vn/citations?user=qUIEy3sAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Vu Thai Hoc</b></a> (Vũ Thái Học)</p>
 <ul>
-<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do" target=&ldquo;blank&rdquo;>University of Ulsan</a>, 2021/03 - Present.</p>
+<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do" target=&ldquo;blank&rdquo;>University of Ulsan</a>, Mar. 2021 - Present.</p>
 </li>
-<li><p>Research Topic: Performance analysis and optimization of 6G short-packet communications. </p>
+<li><p>Research Topic: Performance analysis and network optimization of 6G short-packet communications. </p>
 </li>
 <li><p>Co-supervision with Prof. Sunghwan Kim.</p>
-</li>
-</ul>
-<p></div></p>
-</div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./images/people/mai.jpg" alt="member pic" width="100px" /></div>
-<div id="text-container"><p><div id="Student">
-<a href="https://scholar.google.com.vn/citations?user=Y776EGYAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Le Thi Mai</b></a> (Lê Thị Mai)</p>
-<ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2021/03 - Present.</p>
-</li>
-<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/05 - Present.</p>
-</li>
-<li><p>PhD Thesis: Resource allocation optimization in intelligent wireless networks.</p>
-</li>
-<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
-</li>
-</ul>
-<p></div></p>
-</div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./images/people/thanh.png" alt="member pic" width="100px" /></div>
-<div id="text-container"><p><div id="Student">
-<b>Dao Thien Thanh</b> (Đào Thiện Thành)</p>
-<ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
-</li>
-<li><p>Research Topic: Deep learning-based automatic modulation classification.</p>
-</li>
-<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 </ul>
 <p></div></p>
@@ -177,7 +176,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <a href="https://scholar.google.com/citations?user=3ea0RLkAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Nguyen Minh Duong</b></a> (Nguyễn Minh Dương)</p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, Sep. 2020 - Present.</p>
 </li>
 <li><p>Research Topic: Deep reinforcement learning and federated learning for 6G Internet-of-Things.</p>
 </li>
@@ -189,13 +188,47 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/daeil.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Daeil Noh</b> (노대일)</p>
+<a href="https://scholar.google.com/citations?user=Ttsq5WkAAAAJ&amp;hl=ko" target=&ldquo;blank&rdquo;><b>Daeil Noh</b></a> (노대일)</p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, Sep. 2020 - Present.</p>
 </li>
 <li><p>Research Topic: Deep learning for radio signal processing.</p>
 </li>
 <li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
+</li>
+</ul>
+<p></div></p>
+</div></div>
+<p><div id="Alumnus"></p>
+<h2>Alumnus</h2>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/mai.jpg" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<a href="https://scholar.google.com.vn/citations?user=Y776EGYAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Mai Le</b></a> (Lê Thị Mai)</p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, Mar. 2021 - Feb. 2024.</p>
+</li>
+<li><p>PhD Thesis: Resource allocation optimization in intelligent wireless networks.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
+</li>
+<li><p>Current position: Visiting Fellow, TCD, Ireland.</p>
+</li>
+</ul>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/thanh.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<a href="https://scholar.google.com/citations?user=jcBxjAwAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Dao Thien Thanh</b></a> (Đào Thiện Thành)</p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, Sep. 2020 - Feb. 2024.</p>
+</li>
+<li><p>Research Topic: Deep learning-based automatic modulation classification.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
+</li>
+<li><p>Current position: AI research scientist, Korea.</p>
 </li>
 </ul>
 <p></div></p>
@@ -205,7 +238,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <b>Sang Min Lee</b> (이상민)</p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, Sep. 2020 - Sep. 2023.</p>
 </li>
 <li><p>Research Topic: Communication-efficient FL for massive IoT.</p>
 </li>
@@ -214,14 +247,12 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 </ul>
 <p></div></p>
 </div></div>
-<p><div id="Alumnus"></p>
-<h2>Alumnus</h2>
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/nadia.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
 <b>Nadia Iradukunda</b> </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2019/09 - 2022/08.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Sep. 2019 - Aug. 2022.</p>
 </li>
 <li><p>Research Topic: Resource allocation optimization for UAV wireless backhaul 5G networks.</p>
 </li>
@@ -235,15 +266,13 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/mai.jpg" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
-<b>Le Thi Mai</b> (Lê Thị Mai)</p>
+<b>Mai Le</b> (Lê Thị Mai)</p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2019/03 - 2021/02.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Mar. 2019 - Feb. 2021.</p>
 </li>
 <li><p>Research Topic: Swarm intelligence for D2D communications with unlicensed spectrum.</p>
 </li>
 <li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
-</li>
-<li><p>Current position: PhD student, Pusan National University, Korea.</p>
 </li>
 </ul>
 <p></div></p>
@@ -253,7 +282,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <b>Vo Ta Hoang</b> (Võ Tá Hoàng)</p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2020/02.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Sep. 2017 - Feb. 2020.</p>
 </li>
 <li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
@@ -267,7 +296,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <b>Hoang Huu Trung</b> (Hoàng Hữu Trung)</p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2018/09 - 2021/02.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Sep. 2018 - Feb. 2021.</p>
 </li>
 <li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
@@ -281,7 +310,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <b>Nguyen Tien Hoang</b> (Nguyễn Tiến Hoàng)</p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Sep. 2017 - Aug. 2019.</p>
 </li>
 <li><p>Research Topic: Game theory for computation offloading in MEC networks.</p>
 </li>
@@ -297,7 +326,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <b>Maurice Nduwayezu</b> </p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Sep. 2017 - Aug. 2019.</p>
 </li>
 <li><p>Research Topic: Deep reinforcement learning for computation offloading in NOMA-MEC networks.</p>
 </li>
@@ -313,7 +342,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="text-container"><p><div id="Student">
 <b>Girmay Gebremariam Gebrelibanos</b> </p>
 <ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08. </p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, Sep. 2017 - Aug. 2019. </p>
 </li>
 <li><p>Research Topic: Swarm intelligence for D2D communications with unlicensed spectrum.</p>
 </li>
@@ -328,7 +357,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on December 28<sup>th</sup> 2023  10:15AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on June 28<sup>th</sup> 2024  10:42AM (Time Zone: GMT Daylight Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
