--- a/grantaward.html
+++ b/grantaward.html
@@ -60,6 +60,11 @@ MathJax.Hub.Config({
 <p><div id="Grants"></p>
 <h2>Grants</h2>
 <ul>
+<li><p>HORIZON MSCA Staff Exchange (SE) 2023 (€1,545,600), 2024 - 2028 <br /> 
+<b>Principal Investigator (TCD)</b>. Project 101182933 <br /> 
+Title: ENSURE-6G: Evolution in Security and Privacy for 6G Networks
+</p>
+</li>
 <li><p>Enterprise Ireland's ERC Funding Support (€15,982), Apr. 2023 - Apr. 2025 <br /> 
 <b>Principal Investigator</b>. Project EC20231518 <br /> 
 Title: Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning
@@ -100,6 +105,8 @@ Pusan National University</p>
 <p><div id="Awards"></p>
 <h2>Awards and Prizes</h2>
 <ul>
+<li><p><a href="https://research.com/scientists-rankings/computer-science/ie" target=&ldquo;blank&rdquo;>Best Computer Science Scientists</a> (in Ireland and worldwide), Research.com, 2024.</p>
+</li>
 <li><p><a href="Misc/CEM_Awards_2024_3rd_Place.pdf">Best Paper Award, IEEE Consumer Electronics Magazine</a>, 2024.</p>
 </li>
 <li><p><a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award</a> for EMEA, 2023.</p>
@@ -131,7 +138,7 @@ Pusan National University</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on May 28<sup>th</sup> 2024  09:53AM (Time Zone: GMT Daylight Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
