--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" targe
 </li>
 </ul>
 </div></div>
+<p><div id="New Domain"></p>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>For the latest update, please check <a href="https://www.scss.tcd.ie/viet.pham" target=&ldquo;blank&rdquo;>https:<i></i>www.scss.tcd.ie/viet.pham</a></b></p>
+</div></div>
 <p><div id="Research Interests"></p>
 <h2>Research Interests</h2>
 <ul>
@@ -92,9 +97,13 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" targe
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[06/2024] Our work on intelligent IoT security and privacy has been accepted to IEEE Communications Surveys & Tutorials. </p>
+</li>
+<li><p>[05/2024] Our ENSURE-6G proposal on 6G security and privacy under the HORIZON MSCA Staff Exchange 2023 call has been accepted. </p>
+</li>
 <li><p>[12/2023] The two students whom I co-supervise, Mai Le and Thanh Thien Dao, successfully passed their PhD viva. Congratulations! </p>
 </li>
-<li><p>[11/2023] <font color=red size=+0.5><b>Hot!</b></font> I have have been selected as the winner of the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a>.
+<li><p>[11/2023] I have been selected as the winner of the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a>.
 </p>
 </li>
 <li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director.</p>
@@ -159,10 +168,12 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" targe
 <p></div></p>
 <p><div id="Academic Bio"></p>
 <h2>Academic Bio</h2>
-<p>I am an Assistant Professor in the Networks and Distributed Systems Discipline at the School of Computer Science and Statistics, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Ireland. 
+<p>I am an Assistant Professor in the Networks and Distributed Systems Discipline at the <a href="https://www.scss.tcd.ie/" target=&ldquo;blank&rdquo;>School of Computer Science and Statistics</a>, 
+<a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Ireland. 
 I am also a Supervisor with the <a href="https://www.advance-crt.ie/" target=&ldquo;blank&rdquo;>ADVANCE CRT centre</a> and an Associate Investigator at the <a href="https://connectcentre.ie/" target=&ldquo;blank&rdquo;>CONNECT centre</a>, Ireland. 
-Prior to joining TCD, I was in various academic positions with <a href="https://www.khu.ac.kr/" target=&ldquo;blank&rdquo;>Kyung Hee University</a>, <a href="https://www.changwon.ac.kr/" target=&ldquo;blank&rdquo;>Changwon National University</a>, and <a href="https://www.pusan.ac.kr/" target=&ldquo;blank&rdquo;>Pusan National University</a>. 
-I received the BSc degree and Ph.D. degree, both in Telecommunications Engineering, from <a href="https://hust.edu.vn" target=&ldquo;blank&rdquo;>Hanoi University of Science and Technology</a> in 2013 and <a href="https://www.inje.ac.kr" target=&ldquo;blank&rdquo;>Inje University</a> in 2017, respectively. </p>
+Prior to my tenure at TCD, I held various positions at top universities in Korea from 2017 to 2023, including a postdoc researcher at <a href="https://www.khu.ac.kr/" target=&ldquo;blank&rdquo;>Kyung Hee University</a> 
+and a research professor at <a href="https://www.changwon.ac.kr/" target=&ldquo;blank&rdquo;>Changwon National University</a> and <a href="https://www.pusan.ac.kr/" target=&ldquo;blank&rdquo;>Pusan National University</a>. 
+I received the BSc degree and Ph.D. degree, both in Telecommunications Engineering, from <a href="https://hust.edu.vn" target=&ldquo;blank&rdquo;>Hanoi University of Science and Technology</a> in 2013 and <a href="https://www.inje.ac.kr" target=&ldquo;blank&rdquo;>Inje University</a> in 2017. </p>
 <p>Broadly speaking, my research belongs to the areas of mobile edge networks (i.e., edge computing + wireless networks) and artificial intelligence (AI), the fields that are changing very dramatically and need a great effort from the research communities to realize a future 6G ecosystem in the 2030s. 
 My research interest is based on multidisciplinary approaches of computer science, telecommunications, and engineering mathematics for the practical design of complex and communication networks. 
 To be more specific, my research is motivated via three phases of modeling the network, analyzing the modeled network, and designing algorithms. 
@@ -174,10 +185,14 @@ Intelligence (e.g., wireless AI, deep learning, deep reinforcement learning, and
 Networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). </p>
 <p>I was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
 I was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, 
-the Golden Globe Award in Science and Technology for Younger Researchers in Vietnam in 2021, the IEEE ATC Best Paper Award in 2022, the IEEE MCE Best Paper Award in 2023,
-and the Enterprise Ireland Coordination Support Award in 2023.
+the Golden Globe Award in Science and Technology for Younger Researchers in Vietnam in 2021, the IEEE ATC Best Paper Award in 2022, and the IEEE CE Magazine Best Paper Award in 2024.
+I have been recognised as one of the most-cited researchers by Scopus for three consecutive years, from 2021 to 2023, 
+and as one of the <a href="https://research.com/scientists-rankings/computer-science/ie" target=&ldquo;blank&rdquo;>Best Computer Science Scientists</a> in Ireland and worldwide by Research.com in 2024.
 I was honoured with the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a> in recognition of my research activities for the benefit of the Society.  </p>
-<p>I am currently serving or have served as an (Associate) Editor of IEEE Communications Letters, Journal of Network and Computer Applications, REV Journal on Electronics and Communications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
+<p>I am currently serving or have served as an (Associate) Editor of IEEE Communications Letters, 
+Journal of Network and Computer Applications, REV Journal on Electronics and Communications, 
+and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, 
+IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
 I am a senior member of the IEEE, the IEEE ComSoc, and the IEEE VTS.</p>
 <p></div></p>
 <p><div id="About Me"></p>
@@ -191,7 +206,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on February 26<sup>th</sup> 2024  12:47PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on June 28<sup>th</sup> 2024  10:53AM (Time Zone: GMT Daylight Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
