--- a/publication.html
+++ b/publication.html
@@ -99,54 +99,61 @@ MathJax.Hub.Config({
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>T.-T. Dao, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;DTNet: A Dual-Stream Transformer Model for Short-Time Modulation Classification,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>J. Zhao, M. Chen, Z. Yang, Y. Pan, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="publication.html" target=&rdquo;blank&ldquo;>Resource Allocation for Semantic-Aware Wireless Communication Networks with Imperfect CSI</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
+</li>
+<li><p>Alishahi, P. Fortier, M. Zeng, T. Huynh-The, and <b>Q.-V. Pham</b>, &ldquo;<a href="publication.html" target=&rdquo;blank&ldquo;>Computation Rate Maximization for STAR-RIS Assisted Wireless Powered Mobile Edge Computing Network: TDMA or NOMA?</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+</li>
+<li><p>M.-D. Nguyen, Q.-V. Do, Z. Yang, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2309.14587" target=&rdquo;blank&ldquo;>Distortion Resilience for Goal-Oriented Semantic Communication</a>,&rdquo; under review, <i>IEEE Transactions on Mobile Computing</i>.</p>
+</li>
+<li><p>T.-T. Dao, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="publication.htmlDTNet:" target=&rdquo;blank&ldquo;>A Dual-Stream Transformer Model for Short-Time Modulation Classification</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+</li>
+<li><p>B. Zhang, N. V. Huynh, H. T. Dinh, D. N. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2404.06257" target=&rdquo;blank&ldquo;>DDPG-E2E: A Novel Policy Gradient Approach for End-to-End Communication Systems</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
 <li><p>Z. Zhao, Z. Yang, X. Gan, <b>Q.-V. Pham</b>, C. Huang, W. Xu, and Z. Zhang, &ldquo;<a href="https://arxiv.org/abs/2312.13975" target=&rdquo;blank&ldquo;>A Joint Communication and Computation Design for Semantic Wireless Communication with Probability Graph</a>,&rdquo; under review, <i>Journal of the Franklin Institute</i>, 2023.</p>
 </li>
-<li><p>B. Zhang, N. V. Huynh, H. T. Dinh, D. N. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;DDPG-E2E: A Novel Policy Gradient Approach for End-to-End Communication Systems,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
-</li>
-<li><p>T.-H. Vu, D. B. da Costa, S. Kim, and <b>Q.-V. Pham</b>, &ldquo;Downlink Multiuser RSMA Networks: A General Analytical Framework for the Error Rate Performance,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.
+<li><p>T.-H. Vu, D. B. da Costa, S. Kim, and <b>Q.-V. Pham</b>, &ldquo;<a href="publication.html" target=&rdquo;blank&ldquo;>Downlink Multiuser RSMA Networks: A General Analytical Framework for the Error Rate Performance</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.
+
 </p>
 </li>
-<li><p>M.-D. Nguyen, Q.-V. Do, Z. Yang, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2309.14587" target=&rdquo;blank&ldquo;>Distortion Resilience for Goal-Oriented Semantic Communication</a>,&rdquo; under review, <i>IEEE Journal on Selected Areas in Communications</i>.</p>
+<li><p>T.-H. Vu, M. Zeng, S. Kim, H. V. Poor, and <b>Q.-V. Pham</b>, &ldquo;<a href="publication.html" target=&rdquo;blank&ldquo;>Short-Packet Communications: State-of-the-art and Recent Advances</a>,&rdquo; under review, <i>IEEE Wireless Communications</i>.</p>
 </li>
-<li><p>T.-H. Vu, M. Zeng, S. Kim, H. V. Poor, and <b>Q.-V. Pham</b>, &ldquo;Short-Packet Communications: State-of-the-art and Recent Advances,&rdquo; under review, <i>IEEE Wireless Communications</i>.</p>
+<li><p>M.-D. Nguyen, K. Le, K. Do, B.-S. Hua, <b>Q.-V. Pham</b>, W.-J. Hwang, &ldquo;<a href="publication.html" target=&rdquo;blank&ldquo;>Domain Generalization via Pareto Optimal Gradient Matching</a>,&rdquo; submitted, <i>Conference on Neural Information Processing Systems (NeurIPS)</i>, 2024.</p>
 </li>
-<li><p>K. Do, M.-D. Nguyen, T. H. Nguyen, L. Tran-Thanh, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2309.14053" target=&rdquo;blank&ldquo;>Revisiting LARS for Large Batch Training Generalization of Neural Networks</a>,&rdquo; submitted, <i>International Conference on Machine Learning (ICML)</i>, Vienna Austria, 2024.</p>
+<li><p>K. Do, M.-D. Nguyen, T. H. Nguyen, L. Tran-Thanh, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2309.14053" target=&rdquo;blank&ldquo;>Revisiting LARS for Large Batch Training Generalization of Neural Networks</a>,&rdquo; submitted, <i>33rd ACM International Conference on Information and Knowledge Management (CIKM)</i>, 2024.</p>
 </li>
-<li><p>O. Aouedi, T.-H. Vu, A. Alessio, D. C. Nguyen, and K. Piamrat, G. Marchetto, and <b>Q.-V. Pham</b>, &ldquo;<a href="A" target=&rdquo;blank&ldquo;>Survey on Intelligent Internet of Things: Applications, Security, Privacy, and Future Directions</a>,&rdquo; under review, <i>IEEE Communications Surveys & Tutorials</i>.</p>
-</li>
-<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, D. T. Hoang, Diep N. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2310.07497" target=&rdquo;blank&ldquo;>Sample-Driven Federated Learning for Energy-Efficient and Real-Time IoT Sensing</a>,&rdquo; under review, <i>IEEE Transactions on Mobile Computing</i>.
+<li><p>T.-H. Vu, S. K. Jagatheesaperumal, M.-D. Nguyen, N. Van Huynh, S. Kim, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2405.20024" target=&rdquo;blank&ldquo;>Applications of Generative AI (GAI) for Mobile and Wireless Networking: A Survey</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.
 </p>
-</li>
-<li><p>P. Boopathy, N. Deepa, N. Victor, T. R. Gadekallu, P. K. R. Maddikunta, G. Yenduri, W. Wang, <b>Q.-V. Pham</b>, T. Huynh-The, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2308.02677" target=&rdquo;blank&ldquo;>Metaverse for Industry 5.0 in NextG Communications: Potential Applications and Future Challenges</a>,&rdquo; under revision, <i>IEEE Transactions on Consumer Electronics</i>.</p>
-</li>
-<li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2310.10549" target=&rdquo;blank&ldquo;>Applications of Distributed Machine Learning for the Internet-of-Things: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys & Tutorials</i>.</p>
 </li>
-<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520" target=&rdquo;blank&ldquo;>Label-driven Federated Learning</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
+<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, D. T. Hoang, Diep N. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2310.07497" target=&rdquo;blank&ldquo;>Sample-Driven Federated Learning for Energy-Efficient and Real-Time IoT Sensing</a>,&rdquo; under review, <i>IEEE Transactions on Mobile Computing</i>.</p>
 </li>
-<li><p>M. Le, Q. V. Do, Z. Han, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;Resource Allocation in THz-NOMA-enabled HAP Systems: A Deep Reinforcement Learning Approach,&rdquo; under review, <i>IEEE Transactions on Consumer Electronics</i>.</p>
+<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520" target=&rdquo;blank&ldquo;>Label-driven Federated Learning</a>,&rdquo; under review, <i>IEEE Transactions on Parallel and Distributed Systems</i>.</p>
 </li>
-<li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning,&rdquo; under review, <i>IEEE Transactions on Green Communications and Networking</i>.</p>
+<li><p>Q. V. Do, <b>Q.-V. Pham</b>, Z. Yang, and W.-J. Hwang, &ldquo;<a href="publication.html" target=&rdquo;blank&ldquo;>Learning-Based QoE Optimization for Green Edge Computing Networks with Aerial Servers</a>,&rdquo; under review, <i>IEEE Transactions on Green Communications and Networking</i>.</p>
 </li>
 </ol>
 <p></div></p>
 <p><div id="2024 and Early Access"></p>
 <h2>2024 and Early Access</h2>
 <ol>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2024.3368224" target=&rdquo;blank&ldquo;>Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
+<li><p>M. Le, <b>Q.-V. Pham</b>, Q. V. Do, Z. Han, and W.-J. Hwang &ldquo;<a href="https://dx.doi.org/10.1109/TCE.2024.3420718" target=&rdquo;blank&ldquo;>Resource Allocation in THz-NOMA-enabled HAP Systems: A Deep Reinforcement Learning Approach</a>,&rdquo; <i>IEEE Transactions on Consumer Electronics</i>, early access.</p>
+</li>
+<li><p>O. Aouedi, T.-H. Vu, A. Alessio, D. C. Nguyen, and K. Piamrat, G. Marchetto, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2406.03820" target=&rdquo;blank&ldquo;>Survey on Intelligent Internet of Things: Applications, Security, Privacy, and Future Directions</a>,&rdquo; <i>IEEE Communications Surveys & Tutorials</i>, early access.</p>
+</li>
+<li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/10491355" target=&rdquo;blank&ldquo;>Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
 </li>
 <li><p>M. Huang, F. Gong, G. Li, N. Zhang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2024.3370831" target=&rdquo;blank&ldquo;>Secure Precoding for Satellite NOMA-Aided Integrated Sensing and Communication</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
-<li><p>M. Alishahi, P. Fortier, M. Zeng, <b>Q.-V. Pham</b>, and X. Li, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2024.3354453" target=&rdquo;blank&ldquo;>Energy Minimization for IRS-aided Wireless Powered Federated Learning Networks with NOMA</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
-</li>
-<li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/10322742" target=&rdquo;blank&ldquo;>Incentive Mechanism and Semantic Communication for Edge Computing-assisted Metaverse</a>,&rdquo; <i>IEEE Network</i>, early access.</p>
-</li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/TVT.2023.3325244" target=&rdquo;blank&ldquo;>THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
-</li>
 <li><p>M. Le, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339" target=&rdquo;blank&ldquo;>Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2024.3368224" target=&rdquo;blank&ldquo;>Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 11, no. 11, pp. 19963-19977, Jun. 2024.</p>
+</li>
+<li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/10322742" target=&rdquo;blank&ldquo;>Incentive Mechanism and Semantic Communication for Edge Computing-assisted Metaverse</a>,&rdquo; <i>IEEE Network</i>, vol. 38, no. 3, pp. 277-284, May 2024.</p>
+</li>
+<li><p>M. Alishahi, P. Fortier, M. Zeng, <b>Q.-V. Pham</b>, and X. Li, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2024.3354453" target=&rdquo;blank&ldquo;>Energy Minimization for IRS-aided Wireless Powered Federated Learning Networks with NOMA</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 11, no. 9, pp. 16339-16350, May, 2024.</p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/TVT.2023.3325244" target=&rdquo;blank&ldquo;>THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 73, no. 3, pp. 4435-4440, Mar. 2024.</p>
 </li>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3341307" target=&rdquo;blank&ldquo;>Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 11, no. 5, pp. 7447-7473, Mar. 2024.</p>
 </li>
@@ -365,7 +372,9 @@ MathJax.Hub.Config({
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;Performance Analysis of RSMA-aided UAV-to-Ground Communications,&rdquo; in <i>IEEE Global Communications Conference (GLOBECOM)</i>, Kuala Lumpur, Malaysia, Dec. 2023.</p>
+<li><p>M. N. Luu, M.-D. Nguyen, V. Duc. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;Empowering Federated Learning with DDPG for Energy Efficiency in Communication Networks,&rdquo; in <i>IEEE International Conference on Communications and Electronics (ICCE)</i>, Da Nang, Vietnam, Aug. 2024.</p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10437944/" target=&rdquo;blank&ldquo;>Performance Analysis of RSMA-aided UAV-to-Ground Communications</a>,&rdquo; in <i>IEEE Global Communications Conference (GLOBECOM)</i>, Kuala Lumpur, Malaysia, Dec. 2023.</p>
 </li>
 <li><p>Z. Zhao, Z. Yang, <b>Q.-V. Pham</b>, Q. Yang, and Z. Zhang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10333452/" target=&rdquo;blank&ldquo;>Semantic Communication with Probability Graph: A Joint Communication and Computation Design</a>,&rdquo; in <i>IEEE 98th Vehicular Technology Conference: VTC2023-Fall</i>, Hong Kong, Oct. 2023.</p>
 </li>
@@ -444,7 +453,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on February 26<sup>th</sup> 2024  12:51PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on June 28<sup>th</sup> 2024  10:29AM (Time Zone: GMT Daylight Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
